- Quick readability fixes for checkboxes

--- a/assets/css/App/App.css
+++ b/assets/css/App/App.css
@@ -25,7 +25,7 @@ body:not(.deactivate-window-border, .is-maximized) .titlebar-button-container.mo
 }
 
 .HyperMD-task-line .task-list-item-checkbox::after {
-  color: white;
+  color: var(--checkbox-marker-color);
 }
 
 .HyperMD-task-line .task-list-item-checkbox:hover {
