--- a/assets/scss/Config/Variables.scss
+++ b/assets/scss/Config/Variables.scss
@@ -34,13 +34,13 @@ body {
     --callout-content-padding: 0px;
     --checkbox-radius: 50%;
     --checkbox-size: 15px;
-    --checkbox-marker-color: white;
+    --checkbox-marker-color: var(--color-base-30);
     --checkbox-color: var(--interactive-accent);
     --checkbox-color-hover: var(--interactive-accent-hover);
     --checkbox-border-color: var(--text-faint);
     --checkbox-border-color-hover: var(--text-muted);
     --checklist-done-decoration: line-through;
-    --checklist-done-color: var(--text-muted);
+    --checklist-done-color: var(--color-base-50);
     --code-size: var(--font-smaller);
     --code-background: var(--background-primary-alt);
     --code-normal: var(--text-muted);
@@ -425,6 +425,6 @@ body {
     --interactive-normal: var(--color-base-00);
     --interactive-hover: var(--color-base-10);
     --interactive-accent-hsl: var(--color-accent-hsl);
-    --interactive-accent: var(--color-accent-1);
+    --interactive-accent: var(--color-accent);
     --interactive-accent-hover: var(--color-accent-2);
 }
